--- a/styles/sections/about.css
+++ b/styles/sections/about.css
@@ -42,6 +42,7 @@
   flex: 0 0 50vw;
   padding: 0 4rem 0 1.25rem;
   max-width: 50vw;
+  white-space: pre-line;
 }
 
 .s-about__copy p {
